--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,7 +7,7 @@
 		<link rel="stylesheet" href="/assets/css/burger_style.css" type="text/css" />
 		<title>EAT DA BURGER!</title>
 		<script src="https://code.jquery.com/jquery.js"></script>
-		<script src="/models/burger.js"></script>
+		{{!-- <script src="/models/burger.js"></script> Not needed because express, sequelize, handlebars taking care of this--}}
 	</head>
 	<body>
 		{{{ body }}}
